[package]
name = "looneyssh"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
serde_json = "1.0"
log = "0.4"
byteorder = "1.4"
num_enum = "0.7.1"
env_logger = "0.10.1"
thiserror = "1.0"
anyhow = "1.0"
openssl = "0.10"
pretty-hex = "0.4.0"
rustyssh_derive = { path = "../rustyssh_derive" }
rand = "0.8"
