[package]
name = "rustyssh"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
byteorder = "1.4"
rand = "0.9.1"
base64 = "0.22.1"
base64ct = "=1.6.0"

# KEX: ecdh-sha2-nistp256
p256 = { version = "0.13.2", features = ["ecdh"] }
sha2 = "0.10"

# Host Key: ssh-ed25519
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }

# Cipher: aes128-ctr
aes = "0.8"
# The 'ctr' crate provides the Counter (CTR) mode of operation for block ciphers.
ctr = "0.9"

# MAC: hmac-sha2-256
hmac = "0.12"
