[package]
name = "looneyssh"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server_dev"
path = "src/server_dev.rs"

[[bin]]
name = "client_dev"
path = "src/client_dev.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
log = "0.4"
byteorder = "1.4"
num_enum = "0.7.1"
env_logger = "0.10.1"
thiserror = "1.0"
anyhow = "1.0"
openssl = "0.10"
pretty-hex = "0.4.0"
rustyssh_derive = { path = "../rustyssh_derive" }
rand = "0.8"
tokio = { version = "1", features = ["full"] }

base64 = "0.22.1"
base64ct = "=1.6.0"

# KEX: ecdh-sha2-nistp256
p256 = { version = "0.13.2", features = ["ecdh"] }
sha2 = "0.10"

# Host Key: ssh-ed25519
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }

# Cipher: aes128-ctr
aes = "0.8"
# The 'ctr' crate provides the Counter (CTR) mode of operation for block ciphers.
ctr = "0.9"

# MAC: hmac-sha2-256
hmac = "0.12"
